# freesurfer

./: .clang-format  .gitattributes  .gitconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog  Dockerfile  Doxyfile  INSTALL  LICENSE  Makefile.am  Makefile.extra  Makefile.smalldist  Makefile.smalldist.am  Makefile.smalldist.in  NEWS  NOTICE  README  README.md  acinclude.m4  asegstats2table  check.mk  configure.in  configure.in.without_minc  doxy-file-header  freesurfer.cmake  gnuwin32.cmake  graphics.cmake  minc.cmake  references.txt  run_selected_tests  setup_configure  test.sh  (+2 more)
AntsDenoiseImageFs/: AntsDenoiseImageFs.cpp  AntsDenoiseImageFs.help.xml  CMakeLists.txt  itkAdaptiveNonLocalMeansDenoisingImageFilter.hxx  itkVarianceImageFilter.hxx  test.sh
AntsN4BiasFieldCorrectionFs/: AntsN4BiasFieldCorrectionFs.cpp  AntsN4BiasFieldCorrectionFs.help.xml  CMakeLists.txt  test.sh
BrainstemSS/: AtlasDump.mgz  CMakeLists.txt  Makefile.am  compressionLookupTable.txt  quantifyBrainstemStructures.sh  segmentBS.sh
GEMS/: Makefile.am  Makefile.kvlN4ITK.am  gzstream.cxx  gzstream.h  itkAffine3DTransform.h  itkAffine3DTransform.txx  itkMGHImageIOFactory.cxx  itkMGHImageIOFactory.h  itkPowellOptimizer.cxx  itkPowellOptimizer.h  kvlAddBorder.cxx  kvlAddCSFToBucknerData.cxx  kvlAddMeshToMeshCollection.cxx  kvlAddProbabilityImages.cxx  kvlApplyTransform.cxx  kvlAtlasMesh.h  kvlAtlasMeshAlphaDrawer.h  kvlAtlasMeshBuilder.cxx  kvlAtlasMeshBuilder.h  kvlAtlasMeshCollection.cxx  kvlAtlasMeshCollection.h  kvlAtlasMeshCollectionFastReferencePositionCost.cxx  kvlAtlasMeshCollectionFastReferencePositionCost.h  kvlAtlasMeshCollectionModelLikelihoodCalculator.cxx  kvlAtlasMeshCollectionModelLikelihoodCalculator.h  kvlAtlasMeshCollectionPositionCostCalculator.cxx  kvlAtlasMeshCollectionPositionCostCalculator.h  kvlAtlasMeshCollectionPositionCostCalculator2.cxx  kvlAtlasMeshCollectionPositionCostCalculator2.h  kvlAtlasMeshCollectionReferencePositionCost.cxx  kvlAtlasMeshCollectionReferencePositionCost.h  kvlAtlasMeshCollectionTest.cxx  kvlAtlasMeshCollectionValidator.cxx  kvlAtlasMeshCollectionValidator.h  kvlAtlasMeshDeformationLevenbergMarquardt.cxx  kvlAtlasMeshDeformationLevenbergMarquardt.h  kvlAtlasMeshDeformationLevenbergMarquardt2.cxx  kvlAtlasMeshDeformationLevenbergMarquardt2.h  kvlAtlasMeshDeformationLevenbergMarquardtOptimizer.cxx  kvlAtlasMeshDeformationLevenbergMarquardtOptimizer.h  (+133 more)
GEMS2/: CHANGES.txt  CMakeLists.txt  CMakeLists_old.txt  GEMS2Python.cxx  README.txt  README_GPU.txt  TODO.txt  fs_build_GEMS2  gzstream.C  itkAffine3DTransform.h  itkAffine3DTransform.txx  itkMGHImageIO.h  itkMGHImageIOFactory.h  kvlAtlasMesh.h  kvlAtlasMeshAlphaDrawer.cxx  kvlAtlasMeshAlphaDrawer.h  kvlAtlasMeshAlphaDrawerCPU.cxx  kvlAtlasMeshAlphaDrawerCPU.h  kvlAtlasMeshAlphaDrawerGPU.cxx  kvlAtlasMeshAlphaDrawerGPU.h  kvlAtlasMeshAveragingConjugateGradientOptimizer.cxx  kvlAtlasMeshAveragingConjugateGradientOptimizer.h  kvlAtlasMeshBuilder.cxx  kvlAtlasMeshBuilder.h  kvlAtlasMeshCollection.cxx  kvlAtlasMeshCollection.h  kvlAtlasMeshCollectionFastReferencePositionCost.cxx  kvlAtlasMeshCollectionModelLikelihoodCalculator.cxx  kvlAtlasMeshCollectionModelLikelihoodCalculator.h  kvlAtlasMeshCollectionPositionCostCalculator.cxx  kvlAtlasMeshCollectionPositionCostCalculator.h  kvlAtlasMeshCollectionPositionCostCalculator2.h  kvlAtlasMeshCollectionReferencePositionCost.cxx  kvlAtlasMeshCollectionReferencePositionCost.h  kvlAtlasMeshDeformationConjugateGradientOptimizer.cxx  kvlAtlasMeshDeformationConjugateGradientOptimizer.h  kvlAtlasMeshDeformationConjugateGradientOptimizerCPU.cxx  kvlAtlasMeshDeformationConjugateGradientOptimizerCPU.h  kvlAtlasMeshDeformationConjugateGradientOptimizerGPU.cxx  kvlAtlasMeshDeformationConjugateGradientOptimizerGPU.h  (+112 more)
HippoSF/: AtlasDump.mgz  CMakeLists.txt  Makefile.am  compressionLookupTable.txt  longHippoSubfieldsT1.sh  quantifyHAsubregions.sh  quantifyHippocampalSubfields.sh  segmentHA_T1.sh  segmentHA_T1_long.sh  segmentHA_T2.sh  segmentSF_T1.sh  segmentSF_T1T2.sh  segmentSF_T1_long.sh  segmentSF_T2.sh
SynthSeg/: CMakeLists.txt  synthseg
anatomicuts/: AnatomiCuts.cxx  AnatomiCuts_correspondences.cxx  AnatomiCuts_correspondences_wrapper  AnatomiCuts_wrapper  CMakeLists.txt  CMakeLists_old.txt  Makefile.am  SaveHistograms.cxx  StreamlineFilter.cxx  anatomiCutsUtils  anatomiCutsUtils.py  bundleAnalysis.sh  clean.sh  clusterStats.cxx  diffusionUtils  diffusionUtils.py  dmri_ac.sh  dmri_changeEndpoints.cxx  dmri_coloredFA.cxx  dmri_extractSurfaceMeasurements.cxx  dmri_groupByEndpoints.cxx  dmri_neighboringRegions.cxx  dmri_plots.py  dmri_projectEndPoints.cxx  dmri_stats_ac.cxx  dmri_violinPlots  filterVolumesBybval.py  fixHeader.py  format_bvec.py  runProject.sh  streamlineFilter_wrapper  testOrientationFromParcellationFilter.cxx  trkToImage.cxx  trk_tools.cxx  trk_tools_wrapper
attic/: CMakeLists.txt  notice
check_siemens_dir/: CMakeLists.txt  Makefile.am  check_siemens_dir.c  check_siemens_dir.cpp
cudatest/: Makefile.am  conv1d_test.cpp  convgaussian_test.cpp  gcamCompare.cpp  gcam_addstatus_test.cpp  gcam_applygradient_test.cpp  gcam_clear_test.cpp  gcam_cmp_test.cpp  gcam_jacobenergy_test.cpp  gcam_jacobterm_test.cpp  gcam_labelenergy_test.cpp  gcam_labelterm_copydeltas_test.cpp  gcam_labelterm_final_test.cpp  gcam_labelterm_mainloop_test.cpp  gcam_labelterm_postantconsist_test.cpp  gcam_labelterm_removeoutliers_test.cpp  gcam_labelterm_test.cpp  gcam_lle_test.cpp  gcam_llterm_test.cpp  gcam_removesingularities_test.cpp  gcam_removestatus_test.cpp  gcam_smoothgradient_test.cpp  gcam_smoothnessenergy_test.cpp  gcam_smoothnessterm_test.cpp  gcam_undogradient_test.cpp  gcam_write_test.cpp  kahan.hpp  meanfilter_test.cpp  mri2nc.cpp
dicom/: CMakeLists.txt  Makefile.am  condition.c  ctnthread.c  dcm.c  dcmcond.c  dcmdict.c  dcmsupport.c  lst.c
diffusion_tool/: CMakeCache.txt  CMakeLists.txt  GettingStarted.pro  GettingStarted.pro.user.6fafc84  MainWindow.cpp  MainWindow.h  main.cpp  (+6 more)
(+17402 files in other folders)
